# desktop-automation-test

./: README.md  desktop_controller.py  notepad-auto.py  pyproject.toml
