[project]
name = "desktop-data-entry"
version = "0.1.0"
description = "A Simple test branch to explore and play around with BotCity and Pyautogui"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "botcity-framework-core>=1.3.0",
    "botcity-framework-web>=1.0.1",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
]
